--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Denghui Zhang"
 title_separator          : "-"
 name                     : &name "Denghui Zhang"
 description              : &description "personal description"
-# url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : http://localhost:4000/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : http://zdh2292390.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# url                      : http://localhost:4000/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
