--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,8 +15,8 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  # - title: "CV"
-    # url: /files/cv_limanling.pdf
+  - title: "CV"
+    url: /files/cv_zhangdenghui.pdf
     
   # - title: "Guide"
   #   url: /markdown/
