--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   employer         :
   pubmed           :
   # googlescholar    : "https://scholar.google.com.hk/citations?user=QoovOGcAAAAJ&hl=zh-CN"
-  email            : denghui.zhang@rutgers.edu
+  email            : dhzhangai@gmail.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
