--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   avatar           : "zdh7.jpg"
   # avatar           : "zdh.png"
   # avatar           : "limanlingsmall2.jpg"
-  bio              : "IT Ph.D. Candidate at Rutgers University (denghui.zhang@rutgers.edu)"
+  bio              : "IT Ph.D. Candidate at Rutgers University (dhzhangai@gmail.com)"
   location         : "New Jersey"
   employer         :
   pubmed           :
