--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,8 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    url: /files/cv_zhangdenghui.pdf
+    # url: /files/cv_zhangdenghui.pdf
+    url: /files/cv_zhangdenghui__Business_.pdf
     
   # - title: "Guide"
   #   url: /markdown/
