--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   # avatar           : "zdh7.jpg"
   avatar           : "zdh4.jpeg"
   # avatar           : "limanlingsmall2.jpg"
-  bio              : "IT Ph.D. Candidate at Rutgers University (dhzhangai@gmail.com)"
+  bio              : "IS Ph.D. Candidate at Rutgers University (dhzhangai@gmail.com)"
   location         : "New Jersey"
   employer         :
   pubmed           :
