--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,9 +8,6 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
-    
-  # - title: "Portfolio"
-  #   url: /portfolio/
         
   # - title: "Blog Posts"
   #   url: /year-archive/
@@ -18,6 +15,9 @@ main:
   - title: "CV"
     # url: /files/cv_zhangdenghui.pdf
     url: /files/cv_zhangdenghui__Business_.pdf
+    
+  - title: "Miscellaneous"
+    url: /miscellaneous/
     
   # - title: "Guide"
   #   url: /markdown/
