--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,10 @@ main:
 
   - title: "Teaching"
     url: /teaching/    
-        
+
+  - title: "Awards"
+    url: /awards/    
+
   # - title: "Blog Posts"
   #   url: /year-archive/
     
@@ -18,6 +21,6 @@ main:
     
   - title: "Miscellaneous"
     url: /miscellaneous/
-    
+
   # - title: "Guide"
   #   url: /markdown/
