--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 # Site Author
 author:
   name             : "Denghui Zhang"
-  # avatar           : "zdh7.jpg"
-  avatar           : "zdh7.jpeg"
+  avatar           : "zdh6.jpeg"
+  # avatar           : "zdh7.jpeg"
   # avatar           : "limanlingsmall2.jpg"
   bio              : "IS Ph.D. Candidate at Rutgers University (dhzhangai@gmail.com)"
   location         : "New Jersey"
