--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,8 +16,8 @@ main:
   #   url: /year-archive/
     
   - title: "CV"
-    # url: /files/cv_zhangdenghui.pdf
-    url: /files/cv_zhangdenghui__Business_.pdf
+    url: /files/cv_zhangdenghui_vcs.pdf
+    # url: /files/cv_zhangdenghui__Business_.pdf
     
   # - title: "Miscellaneous"
   #   url: /miscellaneous/
