--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   avatar           : "zdh6.jpeg"
   # avatar           : "zdh7.jpeg"
   # avatar           : "limanlingsmall2.jpg"
-  bio              : "IS Ph.D. Candidate at Rutgers University (dhzhangai@gmail.com)"
+  bio              : "Assistant Professor at Stevens Institute of Technology"
   location         : "New Jersey"
   employer         :
   pubmed           :
