--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,9 +15,9 @@ main:
   # - title: "Blog Posts"
   #   url: /year-archive/
     
-  - title: "CV"
-    url: /files/cv_zhangdenghui_vcs.pdf
-    url: /files/cv_zhangdenghui_Business.pdf
+  # - title: "CV"
+  #   url: /files/cv_zhangdenghui_vcs.pdf
+  #   url: /files/cv_zhangdenghui_Business.pdf
     
   # - title: "Miscellaneous"
   #   url: /miscellaneous/
