--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,9 @@ bing_site_verification   :
 alexa_site_verification  :
 yandex_site_verification :
 
+#theme
+minimal_mistakes_skin: "air" # "default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+
 # Social Sharing
 twitter:
   username               : &twitter
