--- a/_config.yml
+++ b/_config.yml
@@ -90,7 +90,7 @@ author:
   # avatar           : "zdh7.jpeg"
   # avatar           : "limanlingsmall2.jpg"
   bio              : "Assistant Professor at Stevens Institute of Technology"
-  location         : [Hoboken, New Jersey](https://en.wikipedia.org/wiki/Hoboken,_New_Jersey)
+  location         : "Hoboken, New Jersey"
   employer         :
   pubmed           :
   # googlescholar    : "https://scholar.google.com.hk/citations?user=QoovOGcAAAAJ&hl=zh-CN"
