--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Stevens Denghui Zhang"
+title                    : "Denghui Zhang@Stevens"
 title_separator          : "-"
 name                     : &name "Denghui Zhang"
 description              : &description "personal description"
