--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Denghui Zhang (张登辉)"
+  name             : "Denghui Zhang \\(张登辉)"
   avatar           : "zdh6.jpeg"
   # avatar           : "zdh7.jpeg"
   # avatar           : "limanlingsmall2.jpg"
