--- a/_config.yml
+++ b/_config.yml
@@ -93,7 +93,7 @@ author:
   employer         :
   pubmed           :
   # googlescholar    : "https://scholar.google.com.hk/citations?user=QoovOGcAAAAJ&hl=zh-CN"
-  email            : dhzhangai@gmail.com
+  email            : dzhang42@stevens.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
