--- a/_config.yml
+++ b/_config.yml
@@ -92,7 +92,7 @@ author:
   location         : "Hoboken, New Jersey"
   employer         :
   pubmed           :
-  # googlescholar    : "https://scholar.google.com.hk/citations?user=QoovOGcAAAAJ&hl=zh-CN"
+  googlescholar    : "https://scholar.google.com.hk/citations?user=QoovOGcAAAAJ&hl=zh-CN"
   email            : dzhang42@stevens.edu
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
