--- a/_config.yml
+++ b/_config.yml
@@ -177,6 +177,8 @@ kramdown:
   toc_levels: 1..6
   smart_quotes: lsquo,rsquo,ldquo,rdquo
   enable_coderay: false
+  parse_block_html: true
+  parse_span_html: true
 
 
 # Collections
